# secure-research-tool

./: .gitignore  CLAUDE.md  TODO.md  cli.py  mcp_server.py  pipeline.py  pyproject.toml  subagent.py
agents/: analyst.md  researcher.md  search.md
docs/: design.md
schemas/: example_schema.json
validation/: sanitizer.py  schema_validator.py
