[project]
name = "secure-research-tool"
version = "0.1.0"
description = "Secure pipeline for AI-driven extraction of structured data from untrusted web sources"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]",
    "httpx",
    "duckduckgo-search",
]

[tool.setuptools.packages.find]
include = ["validation"]

[project.scripts]
secure-research-tool = "mcp_server:mcp.run"
